--- a/frontend/static/nprogress.css
+++ b/frontend/static/nprogress.css
@@ -4,12 +4,11 @@
 }
 
 #nprogress .bar {
-  background: red;
+  background: #24F1FF;
   position: fixed;
-  z-index: 1031;
+  z-index: 10;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 5px;
 }
@@ -21,7 +20,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px red, 0 0 5px red;
+  box-shadow: 0 0 10px #24F1FF, 0 0 5px #24F1FF;
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -44,8 +43,8 @@
   box-sizing: border-box;
 
   border: solid 2px transparent;
-  border-top-color: red;
-  border-left-color: red;
+  border-top-color: #24F1FF;
+  border-left-color: #24F1FF;
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
